--- a/app/components/Layout/MemberBar/MemberBar.module.css
+++ b/app/components/Layout/MemberBar/MemberBar.module.css
@@ -133,5 +133,5 @@
 
 .diva-bar {
   height: var(--gap-l);
-  background-color: var(--color-accent);
+  background-color: var(--color-diva-purple);
 }
