--- a/app/styles/root.css
+++ b/app/styles/root.css
@@ -177,7 +177,7 @@
 
 .nav-rail {
   grid-area: nav;
-  background-color: var(--color-nav-rail);
+  background-color: var(--color-background-darker);
   border-right: 1px solid var(--color-lighter-border);
   padding: 0;
 
